--- a/scriptie/bachproef/bachproef-tin.tex
+++ b/scriptie/bachproef/bachproef-tin.tex
@@ -14,22 +14,22 @@
 \title{Titel}
 
 % Je eigen naam
-\author{Steven Stevens}
+\author{Sébastien De Pauw}
 
 % De naam van je promotor (lector van de opleiding)
-\promotor{Jan Janssens}
+\promotor{Ozgür Akin}
 
 % De naam van je co-promotor. Als je promotor ook je opdrachtgever is en je
 % dus ook inhoudelijk begeleidt (en enkel dan!), mag je dit leeg laten.
-\copromotor{Piet Pieters}
+\copromotor{Navaron Bracke}
 
 % Indien je bachelorproef in opdracht van/in samenwerking met een bedrijf of
 % externe organisatie geschreven is, geef je hier de naam. Zoniet laat je dit
 % zoals het is.
-\instelling{---}
+\instelling{Next Apps BV}
 
 % Academiejaar
-\academiejaar{2018-2019}
+\academiejaar{2020-2021}
 
 % Examenperiode
 %  - 1e semester = 1e examenperiode => 1
