--- a/scriptie/voorstel/naam_voornaam_voorstel.tex
+++ b/scriptie/voorstel/naam_voornaam_voorstel.tex
@@ -26,24 +26,23 @@
 %---------- Titel & auteur ----------------------------------------------------
 
 % TODO: geef werktitel van je eigen voorstel op
-\PaperTitle{Titel voorstel}
-\PaperType{Onderzoeksvoorstel Bachelorproef 2019-2020} % Type document
+\PaperTitle{Native Android in vergelijking met Flutter, de voor- en nadelen van app ontwikkeling in Flutter.}
+\PaperType{Onderzoeksvoorstel Bachelorproef 2020-2021} % Type document
 
 % TODO: vul je eigen naam in als auteur, geef ook je emailadres mee!
-\Authors{Steven Stevens\textsuperscript{1}} % Authors
-\CoPromotor{Piet Pieters\textsuperscript{2} (Bedrijfsnaam)}
+\Authors{Sébastien De Pauw\textsuperscript{1}} % Authors
+\CoPromotor{Navaron Bracke\textsuperscript{2} (Endare)}
 \affiliation{\textbf{Contact:}
-  \textsuperscript{1} \href{mailto:steven.stevens.u1234@student.hogent.be}{steven.stevens.u1234@student.hogent.be};
-  \textsuperscript{2} \href{mailto:piet.pieters@acme.be}{piet.pieters@acme.be};
+  \textsuperscript{1} \href{mailto:sebastien.depauw@student.hogent.be}{sebastien.depauw@student.hogent.be};
+  \textsuperscript{2} \href{mailto:navaron.bracke@endare.com}{navaron.bracke@endare.com};
 }
 
 %---------- Abstract ----------------------------------------------------------
 
-\Abstract{Hier schrijf je de samenvatting van je voorstel, als een doorlopende tekst van één paragraaf. Wat hier zeker in moet vermeld worden: \textbf{Context} (Waarom is dit werk belangrijk?); \textbf{Nood} (Waarom moet dit onderzocht worden?); \textbf{Taak} (Wat ga je (ongeveer) doen?); \textbf{Object} (Wat staat in dit document geschreven?); \textbf{Resultaat} (Wat verwacht je van je onderzoek?); \textbf{Conclusie} (Wat verwacht je van van de conclusies?); \textbf{Perspectief} (Wat zegt de toekomst voor dit werk?).
-
-Bij de sleutelwoorden geef je het onderzoeksdomein, samen met andere sleutelwoorden die je werk beschrijven.
-
-Vergeet ook niet je co-promotor op te geven.
+\Abstract{
+    In dit onderzoek zullen twee app-ontwikkelingsplatformen met elkaar vergeleken worden. Native Android app ontwikkeling zal vergeleken worden met cross-platform Flutter app ontwikkeling. Native ontwikkeling is het schrijven van een app voor één besturingssysteem, terwijl bij cross-platform ontwikkeling een app wordt geschreven en gecompileerd voor meerdere besturingssystemen. Hieruit volgt de vraag: Waarom worden niet alle apps cross-platform ontwikkeld aangezien dit dubbel werk zou kunnen vermijden? Hiervoor gelden verscheidene redenen die zullen aangehaald worden in het onderzoek.\newline
+    
+    Flutter is een relatief jong platform wat tot gevolg heeft dat er momenteel weinig onderzoek naar verricht werd. In deze paper zal een beeld geschetst worden van de huidige stand van Flutter door deze te toetsen aan zijn native tegengestelde. Hieruit wordt dan een conclusie getrokken over de werking van het framework en de mate waarin dit een goed alternatief biedt op native ontwikkeling. Het uit te voeren onderzoek zal bestaan uit twee delen. In het eerste deel zullen twee bijna identieke apps geschreven worden. Hierbij zal het proces van de appontwikkeling gedocumenteerd worden. In het tweede deel, worden de resultaten van deze apps met elkaar vergeleken. De te vergelijken aspecten bestaan uit: de grootte van de uitvoerbare bestanden en opstartsnelheid van de app, het CPU gebruik van beide apps, het gebruik van online API’s, security, beschikbare libraries en code complexiteit, creatie van views, asynchroon werken en de beschikbare tools binnen het framework. Het onderzoek zal afsluiten met een conclusie, gebaseerd op de scores die beide apps halen op voorgenoemde aspecten. Uit deze resultaten zal een beeld worden geschetst van Flutter tegenover Native Android.
 }
 
 %---------- Onderzoeksdomein en sleutelwoorden --------------------------------
@@ -65,7 +64,7 @@ Vergeet ook niet je co-promotor op te geven.
 %
 % De andere sleutelwoorden zijn vrij te kiezen
 
-\Keywords{Onderzoeksdomein. Keyword1 --- Keyword2 --- Keyword3} % Keywords
+\Keywords{Mobiele applicatieontwikkeling. Flutter --- Android --- Cross-platform} % Keywords
 \newcommand{\keywordname}{Sleutelwoorden} % Defines the keywords heading name
 
 %---------- Titel, inhoud -----------------------------------------------------
