--- a/scriptie/voorstel/voorstel.bib
+++ b/scriptie/voorstel/voorstel.bib
@@ -1,33 +1,38 @@
 % Encoding: UTF-8
-@ARTICLE{Doll1954,
-  author = {Doll, Richard and Hill, A Bradford},
-  title = {The mortality of doctors in relation to their smoking habits: a preliminary
-	report},
-  journal = {British Medical Journal},
-  year = {1954},
-  volume = {328},
-  pages = {1529-1533},
-  number = {7455},
-  owner = {jbuy519},
-  timestamp = {2014.03.28}
+
+@Thesis{Bracke2020,
+  author = {Bracke, Navaron},
+  date   = {2020},
+  title  = {Android Native Development in Kotlin versus het Flutter Framework, een vergelijkende studie},
+  url    = {https://scriptie.hogent.be/2019-2020/322_201639090_PBA-TIN_scriptie.pdf},
 }
 
-@BOOK{Moore2002,
-  title = {Introduction to the Practice of Statistics},
-  publisher = {W. H. Freeman},
-  year = {2002},
-  author = {Moore, David and McCabe, George},
-  owner = {jbuy519},
-  timestamp = {2014.01.28}
+@Thesis{Olsson2020,
+  author   = {Matilda Olsson},
+  date     = {2020-06-13},
+  title    = {A Comparison of Performance and Looks Between Flutter and Native Applications},
+  subtitle = {When to prefer Flutter over native in mobile application development},
+  url      = {A Comparison of Performance and Looks Between Flutter and Native Applications},
 }
 
-@BOOK{Smits2011,
-  title = {Onderzoek met SPSS en Excel},
-  publisher = {Pearson Education},
-  year = {2011},
-  author = {Smits, Johan and Edens, Ronald},
-  owner = {jbuy519},
-  timestamp = {2014.01.23}
+@Thesis{Tuusjaervi2019,
+  author = {Kristian Tuusjärvi},
+  date   = {2019-04-25},
+  title  = {DEVELOPMENT OF RESTAPOINTS MOBILE APPLICATION},
+  url    = {https://www.theseus.fi/bitstream/handle/10024/168896/Opinnäytetyöraportti Kristian Tuusjärvi.pdf?sequence=2&isAllowed=y},
+}
+
+@Thesis{Cheon2020,
+  author = {Yoonsik Cheon; Carlos Chavez},
+  date   = {2020},
+  title  = {Creating Flutter Apps from Native Android Apps},
+  url    = {https://scholarworks.utep.edu/cgi/viewcontent.cgi?article=2485&context=cs_techrep},
+}
+
+@Book{Payne2019,
+  author = {Rap Payne},
+  date   = {2019},
+  title  = {Beginning App Development with Flutter},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
