--- a/scriptie/bachproef/standvanzaken.tex
+++ b/scriptie/bachproef/standvanzaken.tex
@@ -7,11 +7,118 @@
 
 % Pas na deze inleidende paragraaf komt de eerste sectiehoofding.
 
-Dit hoofdstuk bevat je literatuurstudie. De inhoud gaat verder op de inleiding, maar zal het onderwerp van de bachelorproef *diepgaand* uitspitten. De bedoeling is dat de lezer na lezing van dit hoofdstuk helemaal op de hoogte is van de huidige stand van zaken (state-of-the-art) in het onderzoeksdomein. Iemand die niet vertrouwd is met het onderwerp, weet nu voldoende om de rest van het verhaal te kunnen volgen, zonder dat die er nog andere informatie moet over opzoeken \autocite{Pollefliet2011}.
+Zoek onderzoekartikels op.
+Selecteer relevante onderzoeksartikels.
+Breng de bevindingen uit de onderzoeksartikels in kaart.
+Vat de bevindingen uit de onderzoeksartikels samen.
 
-Je verwijst bij elke bewering die je doet, vakterm die je introduceert, enz. naar je bronnen. In \LaTeX{} kan dat met het commando \texttt{$\backslash${textcite\{\}}} of \texttt{$\backslash${autocite\{\}}}. Als argument van het commando geef je de ``sleutel'' van een ``record'' in een bibliografische databank in het Bib\LaTeX{}-formaat (een tekstbestand). Als je expliciet naar de auteur verwijst in de zin, gebruik je \texttt{$\backslash${}textcite\{\}}.
-Soms wil je de auteur niet expliciet vernoemen, dan gebruik je \texttt{$\backslash${}autocite\{\}}. In de volgende paragraaf een voorbeeld van elk.
+Dit hoofdstuk is equivalent aan een literatuurstudie. Eerst werd 
 
-\textcite{Knuth1998} schreef een van de standaardwerken over sorteer- en zoekalgoritmen. Experten zijn het erover eens dat cloud computing een interessante opportuniteit vormen, zowel voor gebruikers als voor dienstverleners op vlak van informatietechnologie~\autocite{Creeger2009}.
+Vervolgens wordt een opsomming gemaakt en een kort beeld geschetst van een aantal van deze studies en hun bijdrage in het vakgebied. In de volgende sectie zullen alleen de meest relevante studies, die dicht aansluiten bij dit onderzoek, worden aangehaald. De ondervindingen uit deze studies werden gebruikt als voorbereiding op het onderzoek en kunnen in volgende hoofdstukken gebruikt worden als steunpunten. Door de ondervindingen van verschillende studies te bundelen, kan gezocht worden naar een rode draad. 
 
-\lipsum[7-20]
+De te onderzoeken criteria van deze studie werden vastgelegd op basis van de reeds voorgaande onderzoeken. Het is de bedoeling dat deze studie bijdraagt aan het vakgebied. Hierdoor wordt weerhouden van reeds onderzochte criteria opnieuw te gaan onderzoeken. Toch zal blijken dat sommige reeds onderzochte criteria opnieuw worden bekeken. Deze herhaling komt voort uit de Flutter 2.0 release. Deze zorgde voor veranderingen in de prestaties van het framework, waardoor bevindingen van voorgaande studies verouderd zijn.
+
+\newpage
+\section{Voorgaande onderzoeken}
+\label{sec:voorgaande-onderzoeken}
+\textbf{Navaron Bracke – Android Native Development in Kotlin versus het Flutter Framework, een vergelijkende studie (2020)}\\
+Navaron Bracke, onderzocht in 2020 de verschillen en gelijkenissen tussen Android en Flutter. De scriptie vormde een beeld over de toenmalige stand van het Flutter framework door het te toetsen tegen het ontwikkelde Android. Het onderzoek was afgebakend door een vooraf vastgelegd aantal criterium. Zo kon de onderzoeker een zekerheid bieden over de grondigheid van de studie. Het onderzochte criterium waren: Internationalisering, navigatie, persisteren van gegevens, user Interfaces, asynchroon werk, permissies, software testing, opstarttijd van de applicatie, grootte van de applicatie. Uit deze studie bleek dat Flutter een gemakkelijkere implementatie biedt voor de meeste onderzochte criteria.
+
+
+\textbf{Austen Latture – Backdrop- an exploration of Flutter (2020)}\\
+Latture, een student aan Grand Valley State Universiteit, schreef in 2020 een studie over het ontwikkelen van een Flutter app. Hij stelde vast dat het een zeer toegankelijk framework is met een taal die voor iedereen met een achtergrond in C gemakkelijk op te pakken is. Hier waren geen vooropgestelde criteria aanwezig, deze studie omschreef de uitwerking van de Backdrop app. In zijn conclusie vergeleek hij Flutter met React Native en prees hierbij de werking van Flutter en het grote aantal voorziene functionaliteit. Echter concludeerde hij wel dat het kiezen van bepaalde libraries niet altijd gemakkelijk is. De jonge aard van het platform zorgt ervoor dat nog geen duidelijke standaarden zijn in termen van libraries. 
+
+
+\textbf{Dang \& Skelton – Teaching mobile app development: choosing the best development tools in practical labs (2019)}\\
+Daniel Dang en David Skelton van de Insitutue of Technology, schreven in 2019 een wetenschappelijk artikel over mobile app development in een educatieve context. Ze onderzochten verschillende native- en cross-platform opties om toe te voegen aan een curriculum.  Onderzochte criteria bij dit onderzoek waren: Design App User Interface, User Event Handling, Services \& Multiple threads used in Internet connection, Graphics and Animation, Device hardware and sensor, Wireless connectivity, Internal data storage, Real time database. Zij concludeerden dat Flutter en Native Android hiervoor de beste opties waren. Belangrijk hierbij te vermelden is dat de studie gebruik maakte van een verouderde Flutter release.
+
+
+\textbf{Carlos Chavez \& Yoonsik Cheon – Creating Flutter Apps from Native Android Apps (2020)}\\
+Carlos Chavez, momenteel een student en Yoonsik Cheon, een professor aan de Universiteit van Texas in El Paso onderzochten in 2020 het herschrijven van Native Android Apps naar Flutter apps. Zij stelden de vraag of het best practice is om Native Android apps te herschrijven in Flutter.  In de conclusie van de studie schreven ze dat rekening moet gehouden worden met de leeftijd van het platform maar ook de tools en gebruikersbasis. Zij concludeerden een tekort aan officiële richtlijnen, libraries en interfaces binnen het platform. Het grote aantal derde partij libraries zorgt ook voor onzekerheid bij het zoeken naar een goed ondersteunde library. 
+%Grote lijnen zijn niet duidelijk volgens studie
+
+
+\textbf{Matilda Olsson – A Comparison of Looks Between Flutter and Native Applications (2020)}\\
+Mathilda Olsson, een oud student aan de Blekinge hogeschool onderzocht in 2020 hoe flutter applicaties in vergelijking staan met native applicaties. In haar conclusie schreef ze: geen tot weinig verschil in CPU gebruik tussen native en flutter apps. Vervolgens haalde ze de codecomplexiteit en omvang aan. De Flutter app uit het onderzoek bleek 1/5 te zijn van de code nodig om 2 native apps te schrijven. Dit verschil is substantieel en duidt nogmaals op het grote voordeel van cross-platform development. Ze concludeerde dat Flutter veel potentieel heeft indien de steun van de community zo groot blijft.  
+
+
+\textbf{Erik Blokland – An Empirical Evaluation of the User Interface Energy Consumption of React Native and Flutter (2019)}\\
+Erik Blokland, in 2019, een student aan de University of Technology in Delft, schreef een vergelijkende Thesis over de energieconsumptie van UI tussen React Native, Flutter en de Android. Hierbij werd Android als standaard genomen en werden de twee andere apps hiermee vergeleken. Drie vragen werden gesteld:
+\begin{itemize}
+    \item Bestaat een verschil in energie verbruik tussen de drie apps
+    \item Hoeveel energie verbruiken specifieke UI acties
+    \item Is er een verschil tussen deze UI acties bij elke app
+\end{itemize}
+In conclusie bleken de verschillen tussen UI acties over de platformen heen zeer stabiel te zijn. De grote verschillen die gevonden werden waren in de verschillende uitgevoerde acties. Het openen van bijvoorbeeld een drawer menu was een veel energie zwaardere taak als het openen van een modal. Als laatste was het niet duidelijk uit onderzoek of er een verschil was tussen de verschillende apps in energieconsumptie. Deze testen waren te inconsistent om conclusies uit te trekken.
+
+
+\textbf{Jakhongir Fayzullaev – Native-like cross-platform mobile development (2018)}\\
+Jakhongir Fayzullaev, schreef in 2018 een Bachelor studie in naam van het Finse Xamk, Universiteit Toegepaste Wetenschappen. Het is een vergelijkende studie tussen drie verschillende cross-platform development frameworks. Kotlin Native, Multi-OS en Flutter werden vergeleken. Drie frameworks die meest bruikbaar zijn voor Android ontwikkelaars omdat ze dicht aansluiten bij de Java en Android ontwikkelingsmanieren. Dit waren in 2018, tijdens het onderzoek, nieuwe platformen met als gevolg geen tot weinig voorgaande studies waarop kon gesteund worden. Wat op zijn beurt leidde tot een oppervlakkige studie die de grote lijnen van elk platform vergeleek. Het Flutter deel van het onderzoek bekeek in grote lijnen: Widgets, het maken van layouts en de bouwstenen van flutter Hij concludeerde dat op vlak van performantie de drie platformen zo goed als identiek waren. Flutter was volgens hem een goed platform in 2018 maar door de jonge aard waren er niet veel bruikbare libraries en tools beschikbaar. Er was op dat moment niet veel built-in functionaliteit. Met als gevolg extra werk voor de programmeurs die meer code moesten schrijven ten opzichte van de andere meer ontwikkelde platformen. Fayzullaev omschrijft deze manier van coderen als ‘het opnieuw uitvinden van het wiel’.
+
+\newpage
+\textbf{Lukas Dagne - Flutter for cross-platform App and SDK development (2019)}\\
+Lukas Dagne, schreef in 2019 zijn Bachelorproef over Flutter in vergelijking met Native- en andere Cross-platform ontwikkelings platformen. De scriptie baseerde zich op een enkele grootte punten binnen App development: de interne specificaties van het framework en de mogelijke architectuur van een app.  De conclusie stelde dat Flutter een goede keuze is voor cross-platform development. De weinige toegevingen die gedaan worden bij het ontwikkelen van een cross platform app in Flutter zorgt voor een duidelijk verschil met de andere frameworks. De grootte aanhang van het platform en de snelle ontwikkelingen duiden volgens Dagne alleen maar op een verbetering naar de toekomst toe. Alhoewel dat de SDK ontwikkeling van het framework nog niet optimaal is het geloof in verbetering groot.
+
+
+\textbf{Ly Hong Hoang - State management in Flutter (2019)}\\
+Ly Hong Hoang, in 2019, een student aan de Metropolia Universiteit Toegepaste Wetenschappen schreef een Bachelorproef studie over state management in Flutter. Hierbij werd gekeken welk state-management systeem het best past bij Flutter. De drie vergeleken systemen waren Business Logic Component (BloC), Redux en Scoped Model. Dit is geen wetenschappelijke studie, de resultaten van de paper zijn geen feiten maar eerder een discussiepunt met een conclusie getrokken op basis van een klein onderzoek. De conclusie stelde dat BloC het best was voor gebruik in Flutter. BloC is volledig op punt gesteld voor Dart, de taal die wordt geschreven in Flutter. Ergens is dit ook wel de logische keuze aangezien het ontwikkeld is door Google. Redux is hoog performant maar complex. Dit is bijvoorbeeld niet goed om te gebruiken in teamverband. Scoped Model is gemakkelijker om te begrijpen maar minder performant als Redux. Ook is het niet gemakkelijk schaalbaar. BloC Is schaalbaar, performant en simpel te verstaan. Het heeft dus alle goede kwaliteiten. Toen deze paper geschreven werd waren er nog niet veel best practices binnen Flutter. Daarom wou de schrijver met deze studie een soort van benchmark zetten voor het kiezen van een state managementsysteem binnen Flutter.
+
+
+\textbf{Ola Dahl – Exploring End User’s Perception of Flutter Mobile Apps (2019)}\\
+Ola Dahl schreef in 2019 een master thesis in kader van de Zweedse Universiteit Malmö. De thesis ging gebruikers perceptie tussen twee identieke apps vergelijken. De eerste app werd geschreven in Native Android en de tweede in Flutter. Er werd dan een vergelijking opgesteld tussen de twee apps, gebruikers konden aan de hand van een aantal vragen aangeven welke app ze verkozen. Het onderzoek werd gevoerd op een kleine groep gebruikers dus conclusies zijn niet representatief.
+Deze studie concludeerde dat gebruikers de native applicatie verkozen boven de Flutter applicatie op vlak van snelheid. Echter op vlak van uitstraling en design ondervonden de gebruikers geen verschillen. De meerderheid verkoos de Android applicatie, slechts 10\% verkoos de Flutter applicatie. 
+
+\newpage
+\textbf{Sebastian Faust - Using Google’s Flutter Framework for the development of a large-scale reference application (2020)}\\
+Sebastian Faust schreef in 2020 Bachelorproef Thesis in naam van de Universiteit Toegepaste Wetenschappen in Keulen. Het doel van dit onderzoek is andere applicatieontwikkelaars helpen wanneer zij voor dezelfde problemen komen te staan tijdens het schrijven van een Flutter app.
+Voor dit onderzoek schreef hij een app, tijdens dit proces documenteerde hij alle design keuzes en de problemen/obstakels die hieruit voortkwamen. Na het evalueren van elk obstakel kon hij altijd tot een optimale oplossing komen. Na de studie werden ondervindingen gebundeld en een set van richtlijen opgesteld voor het ontwikkelen van grootte Flutter applicaties. Richtlijnen en best practices waar developers zich best aan houden tijdens het ontwikkelingsproces. Deze werden gebundeld in een gids die later werd gepubliceerd en goed ontvangen werd door de Flutter community. Voor verdere ondersteuning is nog een interview afgenomen met een Flutter expert. Dit onderzoek werd toegevoegd aan de literatuurstudie om aan te tonen dat Flutter apps schaalbaar zijn.
+
+
+\textbf{Flutter Engage - Flutter 2.0}\\
+Op woensdag 3 maart 2021 werd Flutter Engage georganiseerd, een live event gebracht door het Flutter team. Hier kwamen verschillende grootte namen binnen de Flutter community aan bod om de nieuwe releases aan de wereld te tonen. De developers gaven het de naam Flutter 2.0 door de talrijke upgrades die het platform is ondergaan. Niet alleen het Flutter platform kreeg een upgrade maar ook de taal Dart werd verbeterd voor een vlottere en vertrouwelijke programmeer ervaring.
+
+Grootste Flutter upgrades:
+\begin{itemize}
+    \item Flutter is van een mobiel framework naar een portable framework gegaan. Oorspronkelijk werd Flutter alleen gecompileerd voor iOS en Android besturingssystemen maar door de upgrade zijn daar: Windows, macOS, Linux en Web bijgekomen. Dit wordt gezien als gratis upgrade aangezien het geen oude code breekt maar indien gewenst door een beperkt aantal lijnen code te herschrijven kan men naar 3 keer zoveel systemen compileren.
+    \begin{itemize}
+        \item Canvas kit
+        \item SEO is nog niet goed ondersteund maar staat op het plan voor de toekomst
+    \end{itemize}
+    \item Vouwbare smartphones werden ondersteund.
+    \item Web is beschikbaar als stabiele release.
+    \item Desktop ondersteuning (macOS, Windows, Linux) is beschikbaar als stabiele release (under early release flag)
+    \begin{itemize}
+        \item De installatie van Ubuntu (Linux) wordt herschreven in Flutter
+    \end{itemize}
+    \item Upgrade Firebase plugin -> Flutter Fire
+    \item Google Mobile Ads SDK (open beta) (plugin)
+    \item Nieuwe iOS features zijn aangekondigd
+    \item Nieuwe widgets teogevoegd aan het framework.
+\end{itemize}
+
+\newpage
+Grootste Dart upgrades:
+\begin{itemize}
+    \item Een van de grootste punten was dat sound null safety is toegevoegd, zonder oude code te breken. Dit is een grootte upgrade voor het schrijven van robuuste code. Dart zal zeggen waar er mogelijkse gevaren zitten op null excepties. Dit zorgt voor minder errors en dus betere code.
+    \item Smarter flow analysis
+    \item Late variables
+    \item Required named parameters
+    \item DevTools upgrade
+\end{itemize}
+
+Ook werden in de keynote verschillende grootte bedrijven zoals Ubuntu, Microsoft, Toyota… genoemd die in de toekomst nauw gaan samenwerken met Flutter. Deze samenwerkingen tonen de kracht, potentieel en groei van het platform.
+
+Ook werd in de Keynote het aantal open issues op Github aangehaald. Doordat het een opensource framework is kan iedereen die de broncode wil zien, deze gaan opzoeken op GitHub. Moest een fout stuk code, een simpeler te schrijven stuk code of zelfs als een goede bijdrage aan het platform gevonden worden kan hier een issue van gemaakt worden. Als Flutter deze verbetering heeft nagekeken en goedgekeurd wordt deze toegevoegd aan de broncode. Op deze manier sparen zichzelf een hoop werk uit en groeit het platform snel en volgens de wensen van de gebruikers. Het grootte aantal issues die momenteel open staan zien zij dan ook als een teken van groei. De vele gebruikers die die Flutter willen beter maken is een teken dat er veel vertrouwen is in het platform.
+
+Er zal wel rekening moeten gehouden worden met de upgrade bij het runnen van oudere applicaties, door de updates en aanpassingen zullen veel API’s verouderd zijn. Flutter heeft dit goed geanticipeerd door het Flutter fix commando toe te voegen. Deze zal de bestaande code doorlopen en tonen welke API’s verouderd zijn en in wat ze best vervangen worden.
+
+Dart data classes staan op de toekomst plannen
+
+\newpage
+\section{Waarom deze studie?}
+\label{sec:waarom-deze-studie}
+Cross-platform development heeft een snelgroeiende gebruikersbasis. De vele updates en verbeteringen aan de platformen maakt cross-platform development dan ook elke dag aantrekkelijker. Dit leidt tot meer onderzoek en studies binnen de sector. Tijdens de literatuurstudie bleek dat een groot aantal papers Flutter vergeleek met een ander cross-platform ontwikkel tool. Dit soort papers moet de lezer helpen bij het maken van een keuze tussen cross-platform tools. Door het verdelen van de aandacht over verschillende platformen, komt Flutter niet uitgebreid aanbod in de meeste van deze soort papers. Voor 2020 waren de meeste papers van deze aard. Flutter leek toen nog niet stabiel en groot genoeg om als afzonderlijke tool onderzocht te worden.
+
+Zoals uit voorgaande sectie blijkt, is Flutter meerdere malen onderzocht in 2020. In verschillende studies werd het tekort aan onderzoek voor 2020 aangehaald. Flutter is in het afgelopen jaar in een stroomversnelling geraakt op vlak van onderzoek. Dit is te danken aan de grootte stijging in het gebruikersaantal. Het platform is nog steeds relatief jong maar de aantrekkingskracht ligt hem in de gebruikersbasis en de grootte steun. Hoe meer gebruikers, hoe belangrijker het product in kwestie. Hoe belangrijker het product, hoe meer middelen hierin worden geïnvesteerd en dat lokt op zijn beurt weer meer gebruikers. Deze cirkel wordt alleen onderbroken als het platform in kwestie zijn aantrekkelijkheid verliest. Flutter lijkt hier geen last van te hebben en deze studie wil laten blijken waarom.
+
+Dus kan geconcludeerd worden dat Flutter een interessant onderzoeksdomein is. Maar zoals bij elk onderzoek binnen de IT, zijn bevindingen al snel verouderd. De rappe evolutie binnen de sector doet elk product streven naar de beste versie van zichzelf. De competitie is hoog, dus moet performantie altijd voorop staan. Bij elke update of verbetering zijn voorgaande performantie studies verouderd en niet accuraat. Hierdoor zijn de studies, aangehaald in dit hoofdstuk, dan ook vaak zo recent mogelijk. Toch onderging Flutter net een grootte release. Vele zaken werden verbeterd, onder andere de performantie van het platform. De voorgaande studies zijn weer verouderd en hier ligt een kans om opnieuw onderzoek te doen en beeld te schetsen van de huidige performantie van Flutter. Ook lijkt het interessant om een beeld te schetsen van de performantie van Flutter over tijd.
