Update to both scriptie files
I recommend reading the bachproef-tin.pdf file

--- a/scriptie/bachproef/appendix.tex
+++ b/scriptie/bachproef/appendix.tex
@@ -6,6 +6,7 @@
 \label{ch:appendix}
 
 \section{Hello world template}
+%TODO
 De eerste Flutter app gemaakt in het kader van dit onderzoek was een welbekende en gebruikelijke Hello World applicatie. Een Hello World app klinkt alle ontwikkelaars bekend in de oren. Het is namelijk een standaard template die niet meer doet dan het tonen van een “Hello World” tekst op een scherm. Het is zeer minimaal in aantal lijnen code, wat ergens wel logisch is, en zorgt voor een heel kleine, compacte APK. Om enige vorm van realisme in de ontwikkeling van deze voorbeeld applicaties te integreren, zal er gekozen worden om de builds van deze applicaties via een release schema uit te voeren. Deze manier van builden optimaliseert de code in zijn geheel, zoals de applicatie terug te vinden zou zijn op de Play Store bijvoorbeeld.
 
 \section{Opstart procedures van een applicatie}
