--- a/scriptie/bachproef/asynchroon.tex
+++ b/scriptie/bachproef/asynchroon.tex
@@ -13,7 +13,8 @@ Wanneer gekozen wordt om asynchroon of parallel te werken, wacht men niet op de 
 
 Voor bepaalde taken zoals het ophalen en persisteren van data wordt vaak gekozen voor asynchrone taken. Een scherm moet elke 16 milliseconden worden geüpdatet om de user een vlotte ervaring te geven. Dit kan alleen gebeuren als de UI thread niet geblokkeerd wordt door zware en langdurige taken. In Android is de main thread gelijk aan de UI thread.
 
-Op zowel Android als Flutter zijn verschillende manieren aanwezig om taken asynchroon uit te voeren. In dit hoofdstuk worden de meest gebruikte manieren aangehaald. 
+Op zowel Android als Flutter zijn verschillende manieren aanwezig om taken asynchroon uit te voeren. In dit hoofdstuk worden de meest gebruikte manieren aangehaald.
+
 
 
 \section{Opzet}
@@ -46,3 +47,4 @@ EventBus is een open source library voor Android en Java die gebruik maakt van e
 \subsection{Flutter}
 
 \section{Resultaten}
+\section{Conclusion}
