--- a/scriptie/bachproef/bachproef-tin.tex
+++ b/scriptie/bachproef/bachproef-tin.tex
@@ -86,7 +86,7 @@
 \input{standvanzaken}
 \input{methodologie}
 \input{performantie}
-%\input{views}
+\input{views}
 \input{asynchroon}
 \input{apis}
 \input{security}
