--- a/scriptie/bachproef/complexiteit.tex
+++ b/scriptie/bachproef/complexiteit.tex
@@ -6,4 +6,6 @@
 \chapter{\IfLanguageName{dutch}{Code Complexiteit}{Code Complexity}}
 \label{ch:complexiteit}
 
-\lipsum[1-2]
+\section{Opzet}
+\section{Resultaten}
+\section{Conclusie}
