--- a/scriptie/bachproef/security.tex
+++ b/scriptie/bachproef/security.tex
@@ -5,5 +5,10 @@
 
 \chapter{\IfLanguageName{dutch}{Security}{Security}}
 \label{ch:security}
+Security of beveiliging is vandaag de dag meer dan enkel een hot topic. Het is een nood en het moet een garantie zijn dat aangeboden wordt aan de gebruiker. Doorheen de gehele applicatie is security een belangrijk aspect. Zo is het bij native Android ontwikkeling verplicht om in het Manifest van de applicatie te vermelden welke functionaliteiten de app zal gebruiken die ingebouwd zijn in het systeem. Eén van die functionaliteiten is bijvoorbeeld gebruikmaken van de internetconnectie van het toestel. Daarnaast kan het bijvoorbeeld mogelijk zijn dat de applicatie gebruik wil maken van de interne camera van het toestel. Hiervoor dient de gebruiker dan zijn of haar toestemming te verlenen. Dit zijn de zogenaamde permissions. 
 
-\lipsum[1-2]
+Het is zeker en vast interessant om hier ook eens de verschillen van implementatie hiervoor tussen enerzijds Android en anderzijds Flutter, te bekijken.
+
+\section{Opzet}
+\section{Resultaten}
+\section{Conclusie}
