--- a/scriptie/bachproef/apis.tex
+++ b/scriptie/bachproef/apis.tex
@@ -5,5 +5,12 @@
 
 \chapter{\IfLanguageName{dutch}{Gebruik van API's}{API Usage}}
 \label{ch:api}
+Wanneer ontwikkelaars de term API horen, weten zij direct waarover het gaat. Een Application Programming Interface, of dus kortweg een API, is software die het toelaat om verschillende applicaties of applicatielagen met elkaar te laten communiceren. Een van de primaire use cases waarvoor een API gebruikt wordt in de mobiele applicatie wereld, is die om de zogenaamde API calls uit te voeren. Het doel van deze API calls zijn om vanuit de mobiele applicatie, de API aan te spreken om data op te halen die vervolgens getoond kan worden. Een API zorgt er in dit geval voor dat een mobiele applicatie in connectie staat met de cloud. Naast het ophalen van data kan er vaak ook nieuwe data naar de API gestuurd worden, of kan bestaande data zelfs aangepast worden.
 
-\lipsum[1-2]
+\section{Opzet}
+Voor dit en de volgende experimenten, werd een nieuwe applicatie uitgewerkt voor beide platformen. Deze applicatie bevat voorts alle nodige functionaliteit waaraan dient voldaan te worden om de experimenten tot een goed eind te brengen. Voor dit specifieke experiment, namelijk degene waarvoor gebruik gemaakt wordt van een online API, werd ook functionaliteit uitgewerkt. Er werd gekozen om een online API te gebruiken die duidelijk en goed ondersteund was. Eén van de bekendste en gebruiksvriendelijke API’s is de PokéApi. Deze API, die informatie omtrent allerlei Pokémon teruggeeft, is duidelijk ondersteunt en gedocumenteerd waardoor hij perfect is voor dit experiment. De documentatie omtrent de PokéApi is te lezen op een overzichtelijke site die gebruik maakt van een RESTful interface. 
+
+Om dit experiment uit te voeren, werd gebruik gemaakt van zogenaamde data klassen. Deze klassen worden gebruikt om de verschillende objecten op te bouwen die terugkomen van de API. Aan de hand van bijvoorbeeld een framework, kan dan gebruik gemaakt worden van deze objecten om de data uit te lezen en te gebruiken in de applicatie zelf. Enkele van de libraries die hiervoor in Android veel, en makkelijk te gebruiken zijn, zijn Retrofit, Moshi, Chuck, Glide en Volley. Voor Flutter wordt vooral gebruik gemaakt van de HTTP Package library.	
+
+\section{Resultaten}
+\section{Conclusie}
