--- a/scriptie/bachproef/tooling.tex
+++ b/scriptie/bachproef/tooling.tex
@@ -5,4 +5,6 @@
 \chapter{\IfLanguageName{dutch}{Tooling}{Tooling}}
 \label{ch:tooling}
 
-\lipsum[1-2]
+\section{Opzet}
+\section{Resultaten}
+\section{Conclusie}
