Hello world updates

--- a/scriptie/bachproef/apis.tex
+++ b/scriptie/bachproef/apis.tex
@@ -3,7 +3,7 @@
 %%=============================================================================
 
 
-\chapter{\IfLanguageName{dutch}{Gebruik van API's}{API Usage}}
+\chapter{\IfLanguageName{dutch}{Netwerk calls}{Network calls}}
 \label{ch:api}
 Wanneer ontwikkelaars de term API horen, weten zij direct waarover het gaat. Een Application Programming Interface, of dus kortweg een API, is software die het toelaat om verschillende applicaties of applicatielagen met elkaar te laten communiceren. Een van de primaire use cases waarvoor een API gebruikt wordt in de mobiele applicatie wereld, is die om de zogenaamde API calls uit te voeren. Het doel van deze API calls zijn om vanuit de mobiele applicatie, de API aan te spreken om data op te halen die vervolgens getoond kan worden. Een API zorgt er in dit geval voor dat een mobiele applicatie in connectie staat met de cloud. Naast het ophalen van data kan er vaak ook nieuwe data naar de API gestuurd worden, of kan bestaande data zelfs aangepast worden.
 
